<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">"My App"</string>
    <string name="consult">CONSULT</string>
    <string name="consult_spe">Consult Specialist Doctors \nSecurely And Privately</string>
    <string name="dr_mosia_gl">Dr. Mosia Gloria</string>
    <string name="sr_psycholo">Sr. Psychologist</string>
    <string name="patients">Patients</string>
    <string name="experience">Experience</string>
    <string name="rating">Rating</string>
    <string name="k">1.4K</string>
    <string name="yr">5 yr</string>
    <string name="some_id">4.0</string>
    <string name="about">About</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nec quis purus amet sollicitudin nunc quis.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="invalid_email">This Email is wrong</string>
    <string name="invalid_name">ur name is not Null dear</string>
    <string name="Empty_Email">ur Email is not Null dear</string>
    <string name="invalid_password">"at least 7 charaters "</string>
    <string name="invalid_confirm_password">not the same password dear</string>
    <string name="Empty_Password">u have to be passworded</string>
    <string name="Empty_Confirm_Password">confirm ur passwordation dear</string>
    <string name="invalid_Address">We do not accept homeless people cuz they are poor and do not pay</string>
    <string name="invalid_Age">we only accept born people get born and come back</string>
    <string name="invalid_age">go to graveyard already</string>
    <string name="Sign_Up"> <u>Sign Up</u></string>

</resources>